--- a/DemoMVC/Views/HelloWorld/Index.cshtml
+++ b/DemoMVC/Views/HelloWorld/Index.cshtml
@@ -1,2 +1,6 @@
-<h1>HelloWorld</h1>
-<h2>Hello</h2>
+<h1>@ViewBag.Info</h1>
+<form asp-action = "Index">
+    <input type="text" name = "PersonID">
+    <input type="text" name = "FullName">
+    <input type="submit" value = "Send">
+</form>
