--- a/BTTH/Views/Employee/Index.cshtml
+++ b/BTTH/Views/Employee/Index.cshtml
@@ -3,3 +3,9 @@
 }
 <h1>Employee</h1>
 <h2>Xin chao Employee</h2>
+<form asp-action = "Index">
+    <input type="text" name = "EmployeeId">
+    <input type="text" name = "Age">
+    <input type="submit" value = "Send">
+</form>
+<h1>@ViewBag.Info</h1>
