--- a/BTTH/Views/Person/Index.cshtml
+++ b/BTTH/Views/Person/Index.cshtml
@@ -3,3 +3,9 @@
 }
 <h1>Person</h1>
 <h2>Xin chao Person</h2>
+<form asp-action = "Index">
+    <input type="text" name = "PersonID">
+    <input type="text" name = "FullName">
+    <input type="text" name = "Address">
+    <input type="submit" value = "Send">
+</form>
