--- a/BTTH/Views/Employee/Index.cshtml
+++ b/BTTH/Views/Employee/Index.cshtml
@@ -1,11 +1,53 @@
+@model IEnumerable<BTTH.Models.Employee>
+
 @{
-    ViewData["Tile"] = "Index";
+    ViewData["Title"] = "Index";
 }
-<h1>Employee</h1>
-<h2>Xin chao Employee</h2>
-<form asp-action = "Index">
-    <input type="text" name = "EmployeeId">
-    <input type="text" name = "Age">
-    <input type="submit" value = "Send">
-</form>
-<h1>@ViewBag.Employee</h1>
+
+<h1>Index</h1>
+
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.EmployeeID)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Age)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.FullName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Address)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.EmployeeID)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Age)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.FullName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Address)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.PersonID">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.PersonID">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.PersonID">Delete</a>
+            </td>
+        </tr>
+}
+    </tbody>
+</table>
