--- a/BTTH/Views/Shared/_Layout.cshtml
+++ b/BTTH/Views/Shared/_Layout.cshtml
@@ -31,6 +31,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Person" asp-action="Index">Person</a>
                         </li>
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="HeThongPhanPhoi" asp-action="Index">Hệ Thống phân phối </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="DaiLy" asp-action="Index">DaiLy</a>
+                        </li>
                     </ul>
                 </div>
             </div>
