--- a/BTTH/Views/Person/Index.cshtml
+++ b/BTTH/Views/Person/Index.cshtml
@@ -8,6 +8,7 @@
 
 <p>
     <a asp-action="Create">Create New</a>
+    <a class="btn btn-success" asp-action="Dowload">Dowload</a>
 </p>
 <table class="table">
     <thead>
