--- a/DemoMVC/Views/Person/Index.cshtml
+++ b/DemoMVC/Views/Person/Index.cshtml
@@ -1,5 +1,6 @@
 @model IEnumerable<DemoMVC.Models.Person>
-
+@using X.PagedList;
+@using X.PagedList.Mvc.Core;
 @{
     ViewData["Title"] = "Index";
 }
@@ -40,3 +41,24 @@
 }
     </tbody>
 </table>
+@using (Html.BeginForm("Index", "Person", FormMethod.Get, new {id = "form1"}))
+{
+    <div class = "row">
+        <div class = "col-md-11">
+    @Html.PagedListPager((IPagedList) Model, page => Url.Action("Index", new {page = page,
+        pagesize = ViewBag.psize}), 
+        new X.PagedList.Mvc.Core.PagedListRenderOptions {LiElementClasses = new string[] {"page-item"}, 
+        PageClasses = new string[] {"page-link"}})
+        </div>
+        <div class = "col-md-1">
+            @Html.DropDownList("pagesize", null, new {@class = "form-select"})
+        </div>
+    </div>
+}
+<script>
+    $(document).ready(function(){
+        $("#pagesize").change(function(){
+            $(#form1).submit();
+        });
+    });
+</script>
